# Vinager

./: .gitignore  9_Vinager.code-workspace  CMakeLists.txt  README.md  To Do Lists  ToDo.md  comment.txt  git_comment.txt
01_add_bank/: CMakeLists.txt
01_add_bank/src/: add_bank.cpp
01_init_bank/: CMakeLists.txt
01_init_bank/src/: init_bank.cpp
02_allocate_wealth/: CMakeLists.txt
02_allocate_wealth/src/: allocate_wealth.cpp
02_process_transaction/: CMakeLists.txt
02_process_transaction/src/: process_transaction.cpp
03_process_transaction/: CMakeLists.txt
archive/01_excel_database/exe/Backup/: 2022_FinancialRecords.xlsx  Utilities.xlsx
archive/01_excel_database/include/: Asset.h
archive/01_excel_database/module/00_create_workbook/01_financial_records/src/: initialize_financial_records.cpp
archive/01_excel_database/module/01_bank_and_wealth/02_allocate_wealth/: CMakeLists.txt
archive/01_excel_database/module/01_bank_and_wealth/02_allocate_wealth/src/: allocate_wealth.cpp
archive/01_excel_database/module/01_bank_and_wealth/03_update_worksheet/: CMakeLists.txt
backup/01_excel_database/exe/: 2022_FinancialRecords.xlsx
backup/01_excel_database/include/: utils.h
backup/01_excel_database/module/00_create_workbook/01_financial_records/: CMakeLists.txt
backup/01_excel_database/module/02_process_book/01_process_transaction/src/: process_transaction.cpp
exe/: 2022_FinancialRecords - Kopie.xlsx  2022_FinancialRecords.xlsx  Accounts.csv  AssetType.csv  Banks.xlsx  FinancialRecords_Template.xlsx  June_2022.csv  MonthlyCategories.csv  Overview_2022.csv  Recurring.csv  TransactionRecords.csv  Utilities.xlsx  WealthClasses.csv  allocate_wealth  manage_recurring_transactions  process_monthly_overview  process_transaction  process_yearly_overview
exe/Backup/: 2022_FinancialRecords.xlsx  Utilities.xlsx
include/: Account.h  Asset.h  Banks.h  GlobalData.h  RecurringTransaction.h  WealthClass.h  backup_utils.h  utils.h
module/00_create_workbook/01_banking/: CMakeLists.txt
module/00_create_workbook/01_banking/src/: banking_wkb_wks.cpp
module/00_create_workbook/01_financial_records/src/: initialize_financial_records.cpp
module/00_create_workbook/02_financial_records/: CMakeLists.txt
module/00_create_workbook/02_financial_records/src/: accounting_wkb_wks.cpp
module/00_initialize/01_manage_bank/: CMakeLists.txt
module/00_initialize/01_manage_bank/src/: manage_accounts.cpp  manage_bank.cpp
module/00_initialize/02_manage_wealth/: CMakeLists.txt
module/00_initialize/02_manage_wealth/src/: allocate_wealth.cpp
module/00_initialize/03_manage_recurring_transactions/: CMakeLists.txt
module/00_initialize/03_manage_recurring_transactions/src/: manage_recurring_transactions.cpp
module/01_bank_and_wealth/01_add_bank/: CMakeLists.txt
module/01_bank_and_wealth/01_add_bank/src/: add_bank.cpp
module/01_bank_and_wealth/02_allocate_wealth/: CMakeLists.txt
module/01_bank_and_wealth/02_allocate_wealth/src/: allocate_wealth.cpp
module/01_bank_and_wealth/03_update_worksheet/: CMakeLists.txt
module/01_bank_and_wealth/03_update_worksheet/src/: update_sheet.cpp
module/01_main_process/01_process_transaction/: CMakeLists.txt
module/01_main_process/01_process_transaction/src/: process_transaction.cpp
module/01_main_process/02_process_monthly_overview/: CMakeLists.txt
module/01_main_process/02_process_monthly_overview/src/: process_monthly_overview.cpp
module/01_main_process/02_process_overview/: CMakeLists.txt
module/01_main_process/02_process_overview/src/: process_overview.cpp
module/01_main_process/03_process_yearly_overview/src/: process_yearly_overview.cpp
module/01_main_process/04_process_recurring_income_expense/: CMakeLists.txt
module/01_main_process/04_process_recurring_income_expense/src/: process_yearly_overview.cpp
module/02_process_book/01_process_transaction/src/: process_transaction.cpp
module/02_process_book/03_process_transaction/: CMakeLists.txt
module/02_process_book/03_process_transaction/src/: process_transaction.cpp
